# rag-agent-crew

./: DISCLAIMER.md  LICENSE  README.md  config.example.env  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
knowledge/: ai_trends_2025.txt  crewai_multiagent.txt  llms_2024_2025.txt  ollama_local_ai.txt  rag_applications.txt  vector_databases.txt
src/rag_agent/: crew.py  main.py  rag_client.py  setup_knowledge_base.py
src/rag_agent/config/: agents.yaml  tasks.yaml
src/rag_agent/tools/: rag_tools.py
tests/: test_rag_simple.py
